# apiark

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/benches/: assertions.rs  collection_loading.rs  curl_parsing.rs  interpolation.rs  scripting.rs
apps/desktop/src-tauri/capabilities/: main-window.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: ai.rs  git.rs  http.rs  mod.rs  window.rs
apps/desktop/src-tauri/src/http/: client.rs  mod.rs  response_parser.rs
apps/desktop/src-tauri/src/models/: mod.rs
apps/desktop/src-tauri/src/runner/: collection_runner.rs
apps/desktop/src-tauri/src/scripting/: ark_api.js  assertions.rs  engine.rs  mod.rs
apps/desktop/src-tauri/src/storage/: environment.rs  mod.rs  settings.rs
apps/desktop/src/components/ai/: ai-assistant-dialog.tsx
apps/desktop/src/components/layout/: activity-bar.tsx  side-panel.tsx
apps/desktop/src/lib/: i18n.ts  tauri-api.ts
apps/desktop/src/locales/: en.json
apps/desktop/src/stores/: environment-store.ts  settings-store.ts  tab-store.ts
apps/desktop/src/styles/: global.css  tokens.ts
apps/web/public/: sitemap.xml
apps/web/src/app/benchmarks/: page.tsx
apps/web/src/components/: kofi-button.tsx  navbar.tsx
docs/benchmarks/: competitors.json
scripts/: benchmark-apiark.sh
(+6 files in other folders)
