[package]
name = "apiark-cli"
version = "0.1.0"
description = "ApiArk CLI — run collections from the command line"
authors = ["ApiArk Contributors"]
edition = "2021"

[[bin]]
name = "apiark"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
